--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+body,
+ul,
+div,
+li,
+p {
+  font-family: "Work Sans", sans-serif;
+  /* margin: 0;
+  padding: 0; */
+}
+.parent-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+ }
